@@ -1,9 +1,14 @@
 dh-python (2.20160218) UNRELEASED; urgency=medium
 
+  [ Piotr Ożarowski ]
   * pybuild's distutils build plugin: use force option at install stage to
     avoid non-determinstic shebangs (closes: 804339)
   * pybuild.pm: fail with a message about missing interpreter package in
     Build-Depends if there's none (closes: 819353)
+
+  [ Ondřej Nový ]
+  * When depends on python{3,}-setuptools-scm, set
+    SETUPTOOLS_SCM_PRETEND_VERSION to upstream version
 
  -- Piotr Ożarowski <piotr@debian.org>  Thu, 18 Feb 2016 21:08:04 +0100
 
